# Parallel_Crawler

./: .clangd  .gitignore  CMakeLists.txt  README.md
benchmarks/: bench_threads.cpp
src/: crawler.cpp  crawler.hpp  http_fetcher.cpp  http_fetcher.hpp  link_extractor.cpp  link_extractor.hpp  main.cpp  output.cpp  output.hpp  page_info.hpp  safe_queue.hpp  striped_hash_set.hpp  url_filter.hpp
tests/: test_link_extractor.cpp  test_safe_queue.cpp  test_striped_hash.cpp
tools/: fetch_test.cpp
